add MHA bindings
